# can-lens

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
capture/: can_reader.py  models.py
src/canlens/: app.py
src/canlens/capture/: can_reader.py  recorder.py  session_writer.py
src/canlens/ui/screens/: main_screen.py
src/canlens/ui/widgets/: live_table.py
ui/screens/: main_screen.py
ui/widgets/: live_table.py
