[project]
name = "canlens"
version = "0.1.2"
description = "A professional terminal-based CAN Investigation Recorder & Telemetry Workstation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-can>=4.3.1",
    "rich>=13.7.0",
    "textual>=0.85.0",
]

[project.scripts]
canlens = "canlens.app:run_app"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "canlens",
    "canlens.capture",
    "canlens.ui",
    "canlens.ui.screens",
    "canlens.ui.widgets"
]